--- a/.github/workflows/waka_stats.yml
+++ b/.github/workflows/waka_stats.yml
@@ -20,3 +20,4 @@ jobs:
           SHOW_SHORT_INFO: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_PROJECTS: "False"
+          SHOW_PROFILE_VIEWS: "False"
