--- a/.github/workflows/waka_stats.yml
+++ b/.github/workflows/waka_stats.yml
@@ -3,21 +3,17 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    # Runs at 12am UTC
+    - cron: "0 0 * * *"
 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LINES_OF_CODE: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_PROJECTS: "False"
-          SHOW_PROFILE_VIEWS: "False"
+          SHOW_TITLE: true,
+          COMMIT_MESSAGE: Updated the Readme
+                  
